--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
+    "eventsource-parser": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "mongodb": "^5.2.0",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
-    "openai-edge-stream": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
